updated the logger & lamda