@@ -3,9 +3,10 @@ package com.pfm.converter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.json.simple.JSONArray;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 
@@ -14,9 +15,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.pfm.dto.PensionFundManagerSchemesDTO;
 import com.pfm.model.PensionFundManagerSchemes;
 
-public interface IPFMSchemeConverter extends IBaseConverter{
+public interface IPFMSchemeConverter extends IBaseConverter {
 
-	//ModelMapper modelMapper = new ModelMapper();
+	// ModelMapper modelMapper = new ModelMapper();
+	Logger log = LoggerFactory.getLogger(IPFMSchemeConverter.class);
 
 	@SuppressWarnings("unchecked")
 	Function<JSONArray, List<PensionFundManagerSchemesDTO>> getPensionFundManagerSchemesDTOList = (responseArray) -> {
@@ -26,14 +28,12 @@ public interface IPFMSchemeConverter extends IBaseConverter{
 			try {
 				list.add(mapper.readValue(item.toString(), PensionFundManagerSchemesDTO.class));
 			} catch (JsonProcessingException e) {
-				e.printStackTrace();
+				log.error(" Error Processing JSONArray to List<PensionFundManagerSchemesDTO> ", e);
 			}
-
 		});
 		return list;
-
 	};
-	
+
 	@SuppressWarnings("unchecked")
 	Function<JSONArray, List<PensionFundManagerSchemes>> getPensionFundManagerSchemesModelList = (responseArray) -> {
 		ObjectMapper mapper = new ObjectMapper();
@@ -42,38 +42,32 @@ public interface IPFMSchemeConverter extends IBaseConverter{
 			try {
 				list.add(mapper.readValue(item.toString(), PensionFundManagerSchemes.class));
 			} catch (JsonProcessingException e) {
-				e.printStackTrace();
+				log.error(" Error Processing JSONArray to List<PensionFundManagerSchemesDTO> ", e);
 			}
-
 		});
 		return list;
-
 	};
-	
+
 	default List<PensionFundManagerSchemesDTO> getPFMSchemeData(String url, RestTemplate restTemplate) {
 		ResponseEntity<String> jsonResponse = restTemplate.getForEntity(url, String.class);
-		List<PensionFundManagerSchemesDTO> schemesDTOList = processResponse.andThen(getPensionFundManagerSchemesDTOList)
-				.apply(jsonResponse.getBody());
-		return schemesDTOList;
+		return processResponse.andThen(getPensionFundManagerSchemesDTOList).apply(jsonResponse.getBody());
 	}
-	
+
 	default List<PensionFundManagerSchemes> getPFMSchemeModelData(String url, RestTemplate restTemplate) {
 		ResponseEntity<String> jsonResponse = restTemplate.getForEntity(url, String.class);
-		List<PensionFundManagerSchemes> schemesModelList = processResponse.andThen(getPensionFundManagerSchemesModelList)
-				.apply(jsonResponse.getBody());
-		return schemesModelList;
+		return processResponse.andThen(getPensionFundManagerSchemesModelList).apply(jsonResponse.getBody());
 	}
 
-	Function<PensionFundManagerSchemesDTO, PensionFundManagerSchemes> convertToPFMSModel = (dto) -> modelMapper.map(dto,
+	Function<PensionFundManagerSchemesDTO, PensionFundManagerSchemes> convertToPFMSModel = dto -> modelMapper.map(dto,
 			PensionFundManagerSchemes.class);
 
-	Function<List<PensionFundManagerSchemesDTO>, List<PensionFundManagerSchemes>> convertToPFMSModelList = (
-			items) -> items.stream().map((dto) -> convertToPFMSModel.apply(dto)).collect(Collectors.toList());
+	Function<List<PensionFundManagerSchemesDTO>, List<PensionFundManagerSchemes>> convertToPFMSModelList = items -> items
+			.stream().map(convertToPFMSModel::apply).toList();
 
-	Function<PensionFundManagerSchemes, PensionFundManagerSchemesDTO> convertToPFMSDto = (item) -> modelMapper.map(item,
+	Function<PensionFundManagerSchemes, PensionFundManagerSchemesDTO> convertToPFMSDto = item -> modelMapper.map(item,
 			PensionFundManagerSchemesDTO.class);
 
-	Function<List<PensionFundManagerSchemes>, List<PensionFundManagerSchemesDTO>> convertToPFMSDtoList = (
-			items) -> items.stream().map((item) -> convertToPFMSDto.apply(item)).collect(Collectors.toList());
+	Function<List<PensionFundManagerSchemes>, List<PensionFundManagerSchemesDTO>> convertToPFMSDtoList = items -> items
+			.stream().map(convertToPFMSDto::apply).toList();
 
 }
